<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegClaseActivity">

    <TextView
        android:id="@+id/txvCodigoClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="55dp"
        android:text="@string/c_digo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvNombreClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="11dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toBottomOf="@+id/txtNombreClase"
        app:layout_constraintEnd_toEndOf="@+id/txvSeccion"
        app:layout_constraintStart_toStartOf="@+id/txvCodigoClase" />

    <TextView
        android:id="@+id/txvSeccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:text="@string/secci_n"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtSeccion"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:text="@string/hora"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtHora"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvPiso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/piso"
        app:layout_constraintEnd_toEndOf="@+id/txvAula"
        app:layout_constraintStart_toStartOf="@+id/txvAula"
        app:layout_constraintTop_toTopOf="@+id/txtPiso" />

    <TextView
        android:id="@+id/txvAula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginBottom="195dp"
        android:text="@string/aula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtCodigoClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombreClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodigoClase" />

    <EditText
        android:id="@+id/txtSeccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreClase" />

    <EditText
        android:id="@+id/txtHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSeccion" />

    <EditText
        android:id="@+id/txtPiso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHora" />

    <EditText
        android:id="@+id/txtAula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/txvAula"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRegCl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="Registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/realizar_matr_cula"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRegCl"
        app:layout_constraintStart_toEndOf="@+id/btnRegCl" />


</androidx.constraintlayout.widget.ConstraintLayout>

