<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotasActivity">

    <Button
        android:id="@+id/btnGuardarNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="260dp"
        android:text="@string/guardarNotas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNotasAlumnos"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnEnviarNotasCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="259dp"
        android:text="@string/enviar_notas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnGuardarNotas"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNotasClases" />

    <Button
        android:id="@+id/btnEnviarMatriculaCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:text="@string/enviar_matr_cula"
        app:layout_constraintEnd_toStartOf="@+id/btnEnviarNotasCorreo"
        app:layout_constraintTop_toBottomOf="@+id/btnEnviarNotasCorreo" />

    <Spinner
        android:id="@+id/spinnerNotasClases"
        android:layout_width="194dp"
        android:layout_height="76dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="249dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviarNotasCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toEndOf="@+id/spinnerNotasAlumnos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerNotasAlumnos"
        android:layout_width="176dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNota"
        app:layout_constraintEnd_toStartOf="@+id/spinnerNotasClases"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="477dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ingresar_notas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNotasAlumnos" />
</androidx.constraintlayout.widget.ConstraintLayout>